--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,14 @@
 :root {
   --main-red: #f72210;
+  --main-gray: #a0a0a0;
+}
+
+.container-max {
+  padding: 0 20px;
+}
+
+.font-size-14 {
+  font-size: 14px;
 }
 
 .top-nav {
@@ -36,4 +45,80 @@
 
 .nav-left li:nth-child(2) svg {
   margin-left: 10px;
+}
+
+.nav-bottom {
+  position: relative;
+}
+
+.nav-bottom ul {
+  list-style: none;
+  padding-right: 188px;
+  margin-top: 18px;
+  margin-left: -33px;
+}
+
+.nav-bottom ul li {
+  flex-grow: 1;
+  border-right: 1px solid black;
+  text-align: center;
+  height: 50px;
+}
+
+.nav-bottom ul li a {
+  color: black;
+}
+
+.nav-bottom ul li a:hover {
+  color: red;
+  text-decoration: none;
+}
+
+.nav-bottom .input-nav {
+  position: absolute;
+  width: 95px;
+  top: -5px;
+  right: 88px;
+  display: flex;
+  align-items: baseline;
+}
+
+.nav-bottom .input-nav input {
+  border: none;
+  margin-right: 4px;
+}
+
+.section-1 .column1 .item {
+  border: none;
+}
+
+.section-1 .title-page {
+  color: var(--main-gray);
+}
+
+.section-1 .item img {
+  position: relative;
+}
+
+.section-1 .item a {
+  color: black;
+}
+
+.section-1 .item .article-classification a {
+  color: var(--main-red);
+}
+
+.section-1 .item .article-classification {
+  display: block;
+  text-transform: uppercase;
+  padding: 8px 15px 9px;
+  background-color: rgba(255, 255, 255, 0.9);
+  position: absolute;
+  top: 161px;
+  left: 0;
+  z-index: 1;
+}
+
+.section-1 .column1 .item .item-body {
+  padding: 0 0.2rem;
 }
