--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,8 @@
 .top-nav {
   background: var(--main-red);
   color: white;
+  padding: 0;
+  flex-wrap: wrap;
 }
 
 .nav-right img {
@@ -48,8 +50,15 @@
   margin-left: 10px;
 }
 
+.nav-col {
+  background: white;
+  margin-top: 19px;
+  height: 89px;
+}
+
 .nav-bottom {
   position: relative;
+  width: 100%;
 }
 
 .nav-bottom ul {
@@ -78,7 +87,7 @@
 .nav-bottom .input-nav {
   position: absolute;
   width: 95px;
-  top: -5px;
+  top: 12px;
   right: 88px;
   display: flex;
   align-items: baseline;
@@ -162,4 +171,19 @@
 
 .section-1 .item .item-body {
   padding: 0 0.2rem;
+}
+
+@media screen and (min-width: 992px) {
+  .top-nav {
+    /* height: 182px; */
+  }
+
+  .nav-right {
+    display: block;
+  }
+
+  .nav-middle a svg {
+    width: 350px;
+    fill: white;
+  }
 }
