--- a/styles/style.css
+++ b/styles/style.css
@@ -216,7 +216,14 @@
   margin-top: 15px;
 }
 
-.section-1 .column3 .opinion-item-1 .title {
+.section-1 .column3 .opinion-item-3 {
+  border-bottom: 1px solid var(--weak-gray);
+  margin-top: 15px;
+  padding-bottom: 10px;
+}
+
+.section-1 .column3 .opinion-item-1 .title,
+.section-1 .column3 .opinion-item-3 .title {
   color: black;
   font-size: 15px;
 }
@@ -261,6 +268,55 @@
 .section-1 .column3 .opinion-item-2-sub-item img {
   position: absolute;
   left: 77%;
+  width: auto;
+  height: 100%;
+}
+
+.section-1 .column3 .item .article-classification {
+  display: block;
+  text-transform: uppercase;
+  padding: 8px 15px 9px;
+  background-color: rgba(255, 255, 255, 0.9);
+  position: absolute;
+  top: 161px;
+  left: 0;
+  z-index: 1;
+}
+
+.section-1 .column3 .newsletter {
+  max-width: 250px;
+  border: 1px solid #e5e5e5;
+  background-color: #f4f5f6;
+}
+
+.section-1 .column3 .newsletter a {
+  color: #333;
+}
+
+.section-1 .column3 .newsletter span {
+  background: url(https://g.newsweek.com/www/images/logo-n1.svg) center/contain
+    no-repeat #f72210;
+  display: flex;
+  height: 29px;
+  width: 51px;
+}
+
+.section-1 .newsletter > .card-body > h4 {
+  font-size: 16px;
+}
+
+.section-1 .newsletter .card-body button {
+  padding: 10px 10px 10px 12px;
+  color: white;
+  font: bold 18px/18px "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
+  background: #666;
+  border-radius: 0;
+  border: none;
+}
+
+.section-1 .newsletter .card-body button:hover {
+  background: #999;
 }
 
 @media screen and (min-width: 992px) {
